# lasius-creator

./: README.md  create.py  environment.yml  pyproject.toml
static/css/: styles.css
static/js/: scripts.js  subtitle_animation.js
templates/: index.html
