[tool.poetry]
name = "Creator"
version = "0.1.0"
description = ""
authors = ["galagain <calvin@galagain.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"
python-dotenv = "^1.0.1"
flask = "^3.0.3"
flask-socketio = "^5.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"
